src/objects/Employment_Education_Survey__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerID</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>Employment_Education_Survey_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Cell_Phone__c</fullName>
        <label>Client Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Method__c</fullName>
        <label>Client Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Career Ex Graduation Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempt/No Message Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Contact/ Info Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Contact/ Info Not Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_s_True_Name__c</fullName>
        <label>Client&apos;s True Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employment__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Current Employment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_School_Enrollment__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Current School Enrollment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diploma_Type__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Information_Confirmed__c</fullName>
        <label>Education Information Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Information_Confirmed__c</fullName>
        <label>Employment Information Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Needed__c</fullName>
        <label>Follow-up Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Copied from Contact when Assessment saved until completion: Alumni Survey</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Hourly Pay</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Contact until assessment complete</description>
        <label>Last School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Employment_Education_Survey_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Alumni_Survey__c</fullName>
        <label>Most Recent Alumni Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Last successful contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last contact attempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Information__c</fullName>
        <label>Other Contact Information</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School_Other__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_End_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Start_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Notes__c</fullName>
        <label>Survey Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Client_Cell_Phone__c</fullName>
        <label>Update Client Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Update_Client_Email__c</fullName>
        <label>Update Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Other_Contact_Information__c</fullName>
        <label>Update Other Contact Information</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <label>aEmployment/Education Survey</label>
    <nameField>
        <displayFormat>EES-{0000}</displayFormat>
        <label>Employment/Education Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aEmployment/Education Survey</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>